add d-none to filters-container

--- a/index.html
+++ b/index.html
@@ -24,29 +24,29 @@
             <img id="display-image" src="" />
         </div>
 
-        <div id="filters-container">
-            <div>
+        <div id="filters-container" class="hidden">
+            <div class="filter">
                 Grayscale
             </div>
-            <div>
+            <div class="filter">
                 Saturate
             </div>
-            <div>
+            <div class="filter">
                 Sepia
             </div>
-            <div>
+            <div class="filter">
                 Invert
             </div>
-            <div>
+            <div class="filter">
                 Contrast
             </div>
-            <div>
+            <div class="filter">
                 Brightness
             </div>
-            <div>
+            <div class="filter">
                 Blur
             </div>
-            <div>
+            <div class="filter">
                 Hue Rotate
             </div>
         </div>
